--- a/static/index.html
+++ b/static/index.html
@@ -11,8 +11,8 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
-    <script src="https://unpkg.com/babel-polyfill@6/dist/polyfill.min.js"></script>
+    <!-- <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+    <script src="https://unpkg.com/babel-polyfill@6/dist/polyfill.min.js"></script> -->
     <script
       crossorigin
       src="https://unpkg.com/react@16/umd/react.development.js"
@@ -22,9 +22,7 @@
       src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"
     ></script>
     <script src="https://cdn.auth0.com/js/auth0-spa-js/1.7/auth0-spa-js.production.js"></script>
-    <script src="dist/auth0-react.js"></script>
-    <script type="text/babel" data-presets="es2015,es2016,es2017,stage-3,react">
-      <div>hello</div>
-    </script>
+    <script src="auth0-react.js"></script>
+    <!-- <script type="text/babel" data-presets="es2015,es2016,es2017,stage-3,react"></script> -->
   </body>
 </html>
